add links to experience and education

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                                         </div>
                                         <div class="o-grid__col-sm-4">
                                             <div class="a-header o-content">
-                                                <div class="o-content__body"> <a href="#" target="_blank" class="t-link-container">
+                                                <div class="o-content__body"> <a href="https://joelluijmes.nl" target="_blank"
+                                                        class="t-link-container">
                                                         <h4>Web</h4>
                                                         <p> <span class="t-link-container__item--blended">
                                                                 joelluijmes.nl </span></p>
@@ -89,7 +90,8 @@
                                         </div>
                                         <div class="o-grid__col-sm-4">
                                             <div class="a-header o-content">
-                                                <div class="o-content__body"> <a href="#" target="_blank" class="t-link-container">
+                                                <div class="o-content__body"> <a href="mailto:joell@majos.nl" target="_blank"
+                                                        class="t-link-container">
                                                         <h4>Email</h4>
                                                         <p> <span class="t-link-container__item--blended">
                                                                 joell@majos.nl </span></p>
@@ -124,7 +126,13 @@
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
                                             <div class="c-work__timeframe">Jul. 2018 &ndash; Aug. 2018</div>
-                                            <h3 class="c-work__heading">Topicus Zorg</h3>
+                                            <h3 class="c-work__heading">
+                                                <a href="https://topicus.nl/zorg/" target="_blank" class="t-link-container">
+                                                    <span class="t-link-container__item--blended">
+                                                        Topicus Zorg
+                                                    </span>
+                                                </a>
+                                            </h3>
                                             <h4 class="c-work__title">Softwareontwikkelaar</h4>
                                             <div class="c-work__location">Deventer, Nederland</div>
                                         </div>
@@ -142,7 +150,13 @@
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
                                             <div class="c-work__timeframe">Feb. 2018 &ndash; Jun. 2018</div>
-                                            <h3 class="c-work__heading">R&amp;R WFM</h3>
+                                            <h3 class="c-work__heading">
+                                                <a href="https://www.rr-wfm.com" target="_blank" class="t-link-container">
+                                                    <span class="t-link-container__item--blended">
+                                                        R&amp;R WFM
+                                                    </span>
+                                                </a>
+                                            </h3>
                                             <h4 class="c-work__title">Afstudeerder</h4>
                                             <div class="c-work__location">Veenendaal, Nederland</div>
                                         </div>
@@ -160,7 +174,12 @@
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
                                             <div class="c-work__timeframe">Sep. 2017 &ndash; Jan. 2018</div>
-                                            <h3 class="c-work__heading">Aqubix</h3>
+                                            <h3 class="c-work__heading">
+                                                <a href="https://www.aqubix.com" target="_blank" class="t-link-container">
+                                                    <span class="t-link-container__item--blended">
+                                                        Aqubix
+                                                    </span>
+                                                </a></h3>
                                             <h4 class="c-work__title">Stagiair</h4>
                                             <div class="c-work__location">Naxxar, Malta</div>
                                         </div>
@@ -177,7 +196,13 @@
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
                                             <div class="c-work__timeframe">Mei. 2017 &ndash; Aug. 2017</div>
-                                            <h3 class="c-work__heading">Topicus Zorg</h3>
+                                            <h3 class="c-work__heading">
+                                                <a href="https://topicus.nl/zorg/" target="_blank" class="t-link-container">
+                                                    <span class="t-link-container__item--blended">
+                                                        Topicus Zorg
+                                                    </span>
+                                                </a>
+                                            </h3>
                                             <h4 class="c-work__title">Werkstudent</h4>
                                             <div class="c-work__location">Deventer, Nederland</div>
                                         </div>
@@ -195,7 +220,13 @@
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
                                             <div class="c-work__timeframe">Feb. 2017 &ndash; Apr. 2017</div>
-                                            <h3 class="c-work__heading">3T</h3>
+                                            <h3 class="c-work__heading">
+                                                <a href="https://3t.nl/en/" target="_blank" class="t-link-container">
+                                                    <span class="t-link-container__item--blended">
+                                                        3T &vert; Electronics &amp; Engineering
+                                                    </span>
+                                                </a>
+                                            </h3>
                                             <h4 class="c-work__title">Stagiair</h4>
                                             <div class="c-work__location">Enschede, Nederland</div>
                                         </div>
@@ -213,7 +244,13 @@
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
                                             <div class="c-work__timeframe">Nov. 2015 &ndash; Jan. 2017</div>
-                                            <h3 class="c-work__heading">Topicus Zorg</h3>
+                                            <h3 class="c-work__heading">
+                                                <a href="https://topicus.nl/zorg/" target="_blank" class="t-link-container">
+                                                    <span class="t-link-container__item--blended">
+                                                        Topicus Zorg
+                                                    </span>
+                                                </a>
+                                            </h3>
                                             <h4 class="c-work__title">Werkstudent</h4>
                                             <div class="c-work__location">Deventer, Nederland</div>
                                         </div>
@@ -248,7 +285,13 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">Sep. 2018 &ndash; Jun. 2021</div>
-                                                <h3 class="c-work__heading">Jheronimus Academy of Data Science</h3>
+                                                <h3 class="c-work__heading">
+                                                    <a href="https://jads.nl/" target="_blank" class="t-link-container">
+                                                        <span class="t-link-container__item--blended">
+                                                            Jheronimus Academy of Data Science
+                                                        </span>
+                                                    </a>
+                                                </h3>
                                                 <h4 class="c-work__title">(Pre-)Master, Data Science and
                                                     Entrepreneurship</h4>
                                                 <div class="c-work__location">'s&dash;Hertogenbosch, Nederland</div>
@@ -266,7 +309,14 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2018</div>
-                                                <h3 class="c-work__heading">Saxion Hogenscholen</h3>
+                                                <h3 class="c-work__heading">
+                                                    <a href="https://www.saxion.nl/opleidingen/voltijd/bachelor/technische-informatica"
+                                                        target="_blank" class="t-link-container">
+                                                        <span class="t-link-container__item--blended">
+                                                            Saxion Hogenscholen
+                                                        </span>
+                                                    </a>
+                                                </h3>
                                                 <h4 class="c-work__title">Bachelor, Technische Informatica</h4>
                                                 <div class="c-work__location">Enschede, Nederland</div>
                                             </div>
@@ -285,7 +335,14 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2017</div>
-                                                <h3 class="c-work__heading">Saxion Hogenscholen</h3>
+                                                <h3 class="c-work__heading">
+                                                    <a href="https://www.saxion.nl/opleidingen/voltijd/bachelor/elektrotechniek"
+                                                        target="_blank" class="t-link-container">
+                                                        <span class="t-link-container__item--blended">
+                                                            Saxion Hogenscholen
+                                                        </span>
+                                                    </a>
+                                                </h3>
                                                 <h4 class="c-work__title">Propedeuse, Elektrotechniek</h4>
                                                 <div class="c-work__location">Enschede, Nederland</div>
                                             </div>
