--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                                 <div class="c-work__location">Enschede, Nederland</div>
                                             </div>
                                             <div class="o-grid__col-md-7">
-                                                <p>Gedurende een semester samen met drie andere studenten een eigen
+                                                <p>Gedurende een semester met drie andere studenten een eigen
                                                     processor architectuur bedacht en fysiek ontwikkeld met zoveel
                                                     mogelijk discrete componenten. Daarvoor is er ook een
                                                     (micro-)assembler geschreven om voor de processor te programmeren.</p>
@@ -347,9 +347,9 @@
                                                 <div class="c-work__location">Enschede, Nederland</div>
                                             </div>
                                             <div class="o-grid__col-md-7">
-                                                <p>In het eerste jaar propedeuse voor beiden Technische Informatia en
-                                                    Elektrotechniek behaald. Daarna heb ik nog een aantal
-                                                    post-propedeuse vakken gevolgd van Elektrotechniek uit interesse.</p>
+                                                <p>In het eerste jaar zowel de propedeuse voor Technische Informatia en
+                                                    Elektrotechniek behaald. Daarna heb ik uit intresse nog een aantal
+                                                    post-propedeuse vakken gevolgd van Elektrotechniek.</p>
                                             </div>
                                         </div>
                                     </div>
