--- a/en.html
+++ b/en.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="google-site-verification" content="Kfk1qCinDEpycr8mlliHYYhB2yPj4A4TGGn_i0I3K5k" />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&amp;subset=latin,latin-ext'
         rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
