add google rich data

--- a/en.html
+++ b/en.html
@@ -20,6 +20,20 @@
     <script src="assets/plugins/nivo-lightbox/nivo-lightbox.min.js"></script>
     <script src="assets/js/scrollreveal.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "name": "Joël Luijmes",
+          "url": "https://joelluijmes.com",
+          "sameAs": [
+            "https://github.com/joelluijmes",
+            "https://www.linkedin.com/in/joelluijmes/",
+            "https://facebook.com/joel.luijmes",
+            "https://joelluijmes.nl"
+          ]
+        }
+    </script>
 </head>
 
 <body>
