add description meta

--- a/en.html
+++ b/en.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Joël Luijmes</title>
-    <meta name="description" content="">
+    <meta name="description" content="Online resume of Joël Luijmes, graduated Applied Computer Science and currently studying Data Science and Entrepreneurship. Check out his expierence and skills.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
