--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Joël Luijmes</title>
-    <meta name="description" content="">
+    <meta name="description" content="Het online CV van Joël Luijmes, afgestudeerd Technische Informatica en nu student Data Science. Check hier zijn ervaringen en vaardigheden.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
