update email address

--- a/en.html
+++ b/en.html
@@ -98,18 +98,18 @@
                                                         class="t-link-container">
                                                         <h4>Web</h4>
                                                         <p> <span class="t-link-container__item--blended">
-                                                                joelluijmes.nl </span></p>
+                                                                joelluijmes.com </span></p>
                                                     </a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="o-grid__col-sm-4">
                                             <div class="a-header o-content">
-                                                <div class="o-content__body"> <a href="mailto:joell@majos.nl" target="_blank"
-                                                        class="t-link-container">
+                                                <div class="o-content__body"> <a href="mailto:info@joelluijmes.nl"
+                                                        target="_blank" class="t-link-container">
                                                         <h4>Email</h4>
                                                         <p> <span class="t-link-container__item--blended">
-                                                                joell@majos.nl </span></p>
+                                                                info@joelluijmes.nl </span></p>
                                                     </a>
                                                 </div>
                                             </div>
