--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                                                 <i class="fa fa-lg fa-linkedin"></i>
                                             </a>
                                         </li>
+                                        <li class="a-header">
+                                            <a href="assets/pdf/resume-nl.pdf" target="_blank" class="c-social-button t-social-button">
+                                                <i class="fa fa-lg fa-download"></i>
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="c-header__contact">
