--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Joël Luijmes</title>
-    <meta name="description" content="Het online CV van Joël Luijmes, afgestudeerd Technische Informatica en nu student Data Science. Check hier zijn ervaringen en vaardigheden.">
+    <title>Jo&euml;l Luijmes</title>
+    <meta name="description" content="Het online CV van Jo&euml;l Luijmes, afgestudeerd Technische Informatica en nu student Data Science. Check hier zijn ervaringen en vaardigheden.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -24,7 +24,7 @@
         {
           "@context": "http://schema.org",
           "@type": "Person",
-          "name": "Joël Luijmes",
+          "name": "Jo&euml;l Luijmes",
           "url": "https://joelluijmes.nl",
           "sameAs": [
             "https://github.com/joelluijmes",
@@ -63,7 +63,7 @@
                                         <div class="c-brand">
                                             <h1 class="c-brand__title t-title"> <span class="c-brand__sizer"> <span
                                                         class="a-header c-brand__first-word t-title__first-word">
-                                                        Joël </span> <span class="a-header c-brand__second-word t-title__second-word">
+                                                        Jo&euml;l </span> <span class="a-header c-brand__second-word t-title__second-word">
                                                         Luijmes </span> </span></h1>
                                             <h2 class="a-header c-brand__sub-title t-sub-title"> <span class="c-brand__sizer">
                                                     Software Ontwikkelaar &amp; Student Data Science </span></h2>
