--- a/en.html
+++ b/en.html
@@ -465,6 +465,88 @@
                 </div>
             </div>
         </section>
+
+        <section class="o-section t-section o-section--footer">
+            <div class="o-section__header-bg t-section__header"></div>
+            <div class="o-section__content-bg t-section__content"></div>
+            <div class="o-container">
+                <div class="o-section__container">
+                    <header class="o-section__header t-section__header">
+                        <div class="o-content">
+                            <h2 class="o-section__heading">Contact</h2>
+                        </div>
+                    </header>
+                    <div class="o-section__content t-section__content ">
+                        <div class="c-footer__contact">
+                            <div class="o-grid">
+                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
+                                    <div class="o-content">
+                                        <div class="o-content__body">
+                                            <h4>Location</h4> <address> Portland, OR </address>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
+                                    <div class="o-content">
+                                        <div class="o-content__body">
+                                            <h4>Phone</h4>
+                                            <p>534.456.886</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
+                                    <div class="o-content">
+                                        <div class="o-content__body"> <a href="#" target="_blank" class="t-link-container">
+                                                <h4>Web</h4>
+                                                <p> <span class="t-link-container__item--blended"> ruventhemes.com
+                                                    </span></p>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
+                                    <div class="o-content">
+                                        <div class="o-content__body"> <a href="#" target="_blank" class="t-link-container">
+                                                <h4>Email</h4>
+                                                <p> <span class="t-link-container__item--blended"> hello@example.com
+                                                    </span></p>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="c-footer__contact-divider" />
+                        <div class="o-content">
+                            <div class="c-footer__bottom">
+                                <div class="c-footer__brand">
+                                    <div class="c-brand">
+                                        <div class="o-content__body">
+                                            <h1 class="c-brand__title t-title"> <span class="c-brand__sizer c-brand__sizer--sm">
+                                                    <span class="a-footer c-brand__first-word t-title__first-word">
+                                                        Joël </span> <span class="a-footer c-brand__second-word t-title__second-word">
+                                                        Luijmes </span> </span></h1>
+                                        </div>
+                                    </div>
+                                </div>
+                                <ul class="c-footer__social-buttons c-social-buttons">
+                                    <li class="a-footer">
+                                        <a href="https://github.com/joelluijmes" target="_blank" class="c-social-button t-social-button">
+                                            <i class="fa fa-lg fa-github"></i>
+                                        </a>
+                                    </li>
+                                    <li class="a-footer">
+                                        <a href="https://www.linkedin.com/in/joelluijmes/" target="_blank" class="c-social-button t-social-button">
+                                            <i class="fa fa-lg fa-linkedin"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
