--- a/en.html
+++ b/en.html
@@ -581,37 +581,31 @@
                     <div class="o-section__content t-section__content ">
                         <div class="c-footer__contact">
                             <div class="o-grid">
-                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
-                                    <div class="o-content">
+                                <div class="o-grid__col-sm-4">
+                                    <div class="a-header o-content">
                                         <div class="o-content__body">
-                                            <h4>Location</h4> <address> Portland, OR </address>
+                                            <h4>Region</h4> <address>Noord&dash;Brabant (Netherlands)</address>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
-                                    <div class="o-content">
-                                        <div class="o-content__body">
-                                            <h4>Phone</h4>
-                                            <p>534.456.886</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
-                                    <div class="o-content">
-                                        <div class="o-content__body"> <a href="#" target="_blank" class="t-link-container">
+                                <div class="o-grid__col-sm-4">
+                                    <div class="a-header o-content">
+                                        <div class="o-content__body"> <a href="https://joelluijmes.nl" target="_blank"
+                                                class="t-link-container">
                                                 <h4>Web</h4>
-                                                <p> <span class="t-link-container__item--blended"> ruventhemes.com
-                                                    </span></p>
+                                                <p> <span class="t-link-container__item--blended">
+                                                        joelluijmes.com </span></p>
                                             </a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="o-grid__col-md-3 o-grid__col-sm-6">
-                                    <div class="o-content">
-                                        <div class="o-content__body"> <a href="#" target="_blank" class="t-link-container">
+                                <div class="o-grid__col-sm-4">
+                                    <div class="a-header o-content">
+                                        <div class="o-content__body"> <a href="mailto:info@joelluijmes.nl" target="_blank"
+                                                class="t-link-container">
                                                 <h4>Email</h4>
-                                                <p> <span class="t-link-container__item--blended"> hello@example.com
-                                                    </span></p>
+                                                <p> <span class="t-link-container__item--blended">
+                                                        info@joelluijmes.nl </span></p>
                                             </a>
                                         </div>
                                     </div>
