--- a/en.html
+++ b/en.html
@@ -395,7 +395,7 @@
 
                             </h2>
                             <div class="o-content__body  o-section__description">
-                                PluralSight Skill IQs
+                                Percentile
                             </div>
                         </div>
                     </header>
@@ -404,8 +404,8 @@
                             <div class="o-grid__col-sm-6">
                                 <div class="o-content">
                                     <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">96<small>th percentile</small>
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">96<small>th</small>
                                             </div>
                                         </div>
                                         <div class="o-media__body">
@@ -422,8 +422,8 @@
                             <div class="o-grid__col-sm-6">
                                 <div class="o-content">
                                     <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">90<small>th percentile</small>
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">90<small>th</small>
                                             </div>
                                         </div>
                                         <div class="o-media__body">
@@ -440,8 +440,8 @@
                             <div class="o-grid__col-sm-6">
                                 <div class="o-content">
                                     <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">89<small>th percentile</small>
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">89<small>th</small>
                                             </div>
                                         </div>
                                         <div class="o-media__body">
@@ -458,8 +458,8 @@
                             <div class="o-grid__col-sm-6">
                                 <div class="o-content">
                                     <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">89<small>th percentile</small>
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">89<small>th</small>
                                             </div>
                                         </div>
                                         <div class="o-media__body">
