--- a/index.html
+++ b/index.html
@@ -388,91 +388,83 @@
                 <div class="o-section__container">
                     <header class="o-section__header t-section__header">
                         <div class="o-content">
-                            <h2 class="o-section__heading">
-                                <a href="https://app.pluralsight.com/profile/jol-luijmes" target="_blank" class="t-link-container">
-                                    <span class="t-link-container__item--blended">
-                                        Assessments
-                                    </span>
-                                </a>
-
-                            </h2>
-                            <div class="o-content__body  o-section__description">
-                                PluralSight Skill IQs
-                            </div>
+                            <h2 class="o-section__heading">Skills</h2>
                         </div>
                     </header>
                     <div class="o-section__content t-section__content ">
                         <div class="o-grid">
                             <div class="o-grid__col-sm-6">
-                                <div class="o-content">
-                                    <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">96<small>th percentile</small>
-                                            </div>
-                                        </div>
-                                        <div class="o-media__body">
-                                            <h3>
-                                                Git
-                                            </h3>
-                                        </div>
+                                <div class="o-media o-media--block o-content">
+                                    <div class="o-media__figure">
+                                        <div class="c-number t-primary-color">01</div>
                                     </div>
-                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
-                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="96"></div>
+                                    <div class="o-media__body o-content__body">
+                                        <h3>C# / .NET Core</h3>
+                                        <p>Developing in C# since I can remember, from small tools to large projects.
+                                            Working at Topicus I learned a lot about ASP.NET. During the internship at
+                                            Aqubix, I've taught the other developers about modern C# and .NET Core.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="o-grid__col-sm-6">
-                                <div class="o-content">
-                                    <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">90<small>th percentile</small>
-                                            </div>
-                                        </div>
-                                        <div class="o-media__body">
-                                            <h3>
-                                                TypeScript
-                                            </h3>
-                                        </div>
+                                <div class="o-media o-media--block o-content">
+                                    <div class="o-media__figure">
+                                        <div class="c-number t-primary-color">02</div>
                                     </div>
-                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
-                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="90"></div>
+                                    <div class="o-media__body o-content__body">
+                                        <h3>TypeScript / JavaScript</h3>
+                                        <p>At first I was using just JavaScript at Topicus. Later on I started with web
+                                            development. View.js I've used during my graduation project. Nowadays I
+                                            prefer TypeScript with Angular.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="o-grid__col-sm-6">
-                                <div class="o-content">
-                                    <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">89<small>th percentile</small>
-                                            </div>
-                                        </div>
-                                        <div class="o-media__body">
-                                            <h3>
-                                                C#
-                                            </h3>
-                                        </div>
+                                <div class="o-media o-media--block o-content">
+                                    <div class="o-media__figure">
+                                        <div class="c-number t-primary-color">03</div>
                                     </div>
-                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
-                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="89"></div>
+                                    <div class="o-media__body o-content__body">
+                                        <h3>Embedded Development</h3>
+                                        <p>Due my education I've learned a lot about embedded development, the field
+                                            which combines hardware and software. I especially am an expert on 8-bit
+                                            AVR Microcontrollers.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="o-grid__col-sm-6">
-                                <div class="o-content">
-                                    <div class="o-media o-media--block">
-                                        <div class="o-media__assessment">
-                                            <div class="c-number t-primary-color">89<small>th percentile</small>
-                                            </div>
-                                        </div>
-                                        <div class="o-media__body">
-                                            <h3>
-                                                JavaScript
-                                            </h3>
-
-                                        </div>
+                                <div class="o-media o-media--block o-content">
+                                    <div class="o-media__figure">
+                                        <div class="c-number t-primary-color">04</div>
                                     </div>
-                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
-                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="89"></div>
+                                    <div class="o-media__body o-content__body">
+                                        <h3>Databases</h3>
+                                        <p>At Topicus a SQL database is used with NHibernate as ORM. In my own projects
+                                            I use EntityFramework Core. During my graduation I've used MongoDB.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="o-grid__col-sm-6">
+                                <div class="o-media o-media--block o-content">
+                                    <div class="o-media__figure">
+                                        <div class="c-number t-primary-color">05</div>
+                                    </div>
+                                    <div class="o-media__body o-content__body">
+                                        <h3>Linux</h3>
+                                        <p>As a sort of hobby I'm using Linux servers to play around with, implement
+                                            CI/CD for my projects and host a webshop and mailserver.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="o-grid__col-sm-6">
+                                <div class="o-media o-media--block o-content">
+                                    <div class="o-media__figure">
+                                        <div class="c-number t-primary-color">06</div>
+                                    </div>
+                                    <div class="o-media__body o-content__body">
+                                        <h3>Docker</h3>
+                                        <p>Since my first experience with Docker, which was when I developed the web
+                                            service at Aqubix, I use it for all my projects.</p>
                                     </div>
                                 </div>
                             </div>
