include pluralsight on dutch resume

--- a/index.html
+++ b/index.html
@@ -388,6 +388,107 @@
                 <div class="o-section__container">
                     <header class="o-section__header t-section__header">
                         <div class="o-content">
+                            <h2 class="o-section__heading">
+                                <a href="https://app.pluralsight.com/profile/jol-luijmes" target="_blank" class="t-link-container">
+                                    <span class="t-link-container__item--blended">
+                                        Assessments
+                                    </span>
+                                </a>
+
+                            </h2>
+                            <div class="o-content__body  o-section__description">
+                                Percentile
+                            </div>
+                        </div>
+                    </header>
+                    <div class="o-section__content t-section__content ">
+                        <div class="o-grid">
+                            <div class="o-grid__col-sm-6">
+                                <div class="o-content">
+                                    <div class="o-media o-media--block">
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">96<small>th</small>
+                                            </div>
+                                        </div>
+                                        <div class="o-media__body">
+                                            <h3>
+                                                Git
+                                            </h3>
+                                        </div>
+                                    </div>
+                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
+                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="96"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="o-grid__col-sm-6">
+                                <div class="o-content">
+                                    <div class="o-media o-media--block">
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">90<small>th</small>
+                                            </div>
+                                        </div>
+                                        <div class="o-media__body">
+                                            <h3>
+                                                TypeScript
+                                            </h3>
+                                        </div>
+                                    </div>
+                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
+                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="90"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="o-grid__col-sm-6">
+                                <div class="o-content">
+                                    <div class="o-media o-media--block">
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">89<small>th</small>
+                                            </div>
+                                        </div>
+                                        <div class="o-media__body">
+                                            <h3>
+                                                C#
+                                            </h3>
+                                        </div>
+                                    </div>
+                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
+                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="89"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="o-grid__col-sm-6">
+                                <div class="o-content">
+                                    <div class="o-media o-media--block">
+                                        <div class="o-media__figure">
+                                            <div class="c-number t-primary-color">89<small>th</small>
+                                            </div>
+                                        </div>
+                                        <div class="o-media__body">
+                                            <h3>
+                                                JavaScript
+                                            </h3>
+
+                                        </div>
+                                    </div>
+                                    <div class="c-progress-bar o-content__body t-border-color-bg u-mt-text">
+                                        <div class="a-progress-bar c-progress-bar__filler t-primary-bg" data-percent="89"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="o-section t-section ">
+            <div class="o-section__header-bg t-section__header"></div>
+            <div class="o-section__content-bg t-section__content"></div>
+            <div class="o-container">
+                <div class="o-section__container">
+                    <header class="o-section__header t-section__header">
+                        <div class="o-content">
                             <h2 class="o-section__heading">Skills</h2>
                         </div>
                     </header>
